--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,4 +1,5 @@
 <% @blogs.each do |blog| %>
+    <a href = "/blogs/<%= blog.id%>"> show </a>
     <div>
         <ul>
             <li>id: <%= blog.id %></li>
@@ -8,3 +9,5 @@
         <hr />
     </div>
 <% end %>
+
+
